--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -25,14 +25,14 @@
     
     <div class="row">
         <div class="col s12 m4 l4">
-            <div class="card white blue-grey-text text-darken-2">
+            <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
                     <span class="card-content title white-text">{{'profile.tabs.account' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
                         <div class="col s12">
-                            <a href="#/private/profile/writeProfile" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/profile/writeProfile" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">account_box</i>
                             </a>
                             <br/>
@@ -45,7 +45,7 @@
 
                         <div class="col s12">
                             <br/>
-                            <a href="#/private/profile/changePwd" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/profile/changePwd" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">https</i>
                             </a>
                             <br/>
@@ -57,7 +57,7 @@
 
                         <div class="col s12">
                             <br/>
-                            <a href="#/private/billing" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/billing" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">verified_user</i>
                             </a>
                             <br/>
@@ -72,14 +72,14 @@
             
             
         <div class="col s12 m4 l4">
-            <div class="card white blue-grey-text text-darken-2">
+            <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
                     <span class="card-content title white-text">{{'profile.tabs.sandbox' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
                         <div class="col s12">
-                            <a href="#/private/sbSwitch" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/sbSwitch" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">rotate_90_degrees_ccw</i>
                             </a>
                             <br/>
@@ -91,7 +91,7 @@
 
                         <div class="col s12">
                             <br/>
-                            <a href="#/private/inviteMember" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/inviteMember" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">share</i>
                             </a>
                             <br/>
@@ -102,7 +102,7 @@
                         <div class="col s12 divider"></div>
                         <div class="col s12">
                             <br/>
-                            <a href="#/private/sbMemberMgnt" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/sbMemberMgnt" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">group</i>
                             </a>
                             <br/>
@@ -116,14 +116,14 @@
         </div>
         
         <div class="col s12 m4 l4">
-            <div class="card white blue-grey-text text-darken-2">
+            <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
                     <span class="card-content title white-text">{{'profile.tabs.preference' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
                         <div class="col s12">
-                            <span class="blue-grey-text text-darken-2">
+                            <span class="colorMain-text">
                                 <i class="material-icons md-48">settings_applications</i>
                             </span>
                             <br/>
@@ -135,7 +135,7 @@
 
                         <div class="col s12">
                             <br/>
-                            <a href="#/private/sbDefault" class="waves-effect waves-light red-text text- lighten-1">
+                            <a href="#/private/sbDefault" class="waves-effect waves-light colorAccent-text">
                                 <i class="material-icons md-48">grade</i>
                             </a>
                             <br/>
@@ -147,7 +147,7 @@
                         <div class="col s12 divider"></div>
                         <div class="col s12">
                             <br/>
-                            <span class="blue-grey-text text-darken-2">
+                            <span class="colorMain-text">
                                 <i class="material-icons md-48">notifications_active</i>
                             </span>
                             <br/>
