--- a/src/app/index.css
+++ b/src/app/index.css
@@ -138,7 +138,7 @@ input[type=text], input[type=password], input[type=email], input[type=url], inpu
 }
 
 button, input, optgroup, select, textarea {
-    color: #546e7a;
+    color: #646464;
 }
 
 .tabs .tab a {
