--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -1,4 +1,4 @@
-<div class="container" ng-cloack>
+<div class="container" colorMain-text>
 
     <!-- space between header menu and body-->
     <div class="row"></div>
@@ -9,7 +9,7 @@
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
-                    <span class="small">{{'profile.label.avatar' | translate }}</span>
+                    <span class="small">{{'profilePage.form.label.avatar' | translate }}</span>
                 </div>
                 <div class="col m7 s12">
                     <br/>
@@ -25,7 +25,7 @@
     
     <div class="row">
         <div class="col s12 card">
-            <form name="profileForm" ng-submit="updateProfilUser()">
+            <form name="profileForm" novalidate>
 
                 <!-- Empty row -->
                 <div class="row">&nbsp;</div>
@@ -38,7 +38,7 @@
                 		<!-- Login -->
                 		<div class="row">
 	                		<div class="col s12 input-field">
-	                            <label for="userLogin"> {{'profile.label.nick' | translate }}</label>
+	                            <label for="userLogin"> {{'profilePage.form.label.login' | translate }}</label>
 	                            <input disabled type="text" id="userLogin" name="userLogin" ng-model="user.account.login"/>
 	                        </div>
                         </div>
@@ -46,7 +46,7 @@
                         <!-- e-mail on Small -->
                         <div class="row hide-on-med-and-up">
 	                        <div class="col s12 input-field">
-		                        <label for="email"> {{'profile.label.email' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                        <label for="email"> {{'profilePage.form.label.email' | translate }} <span class="colorAccent-text">*</span></label>
 		                        <input type="email" id="email" name="email"
 		                               ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
 		                               class="validate"
@@ -54,46 +54,46 @@
 		                               ng-class="{ 'invalid': profileForm.email.$invalid }"/>
 		
 		                        <span ng-class="{'has-error': profileForm.email.$dirty && profileForm.email.$error.required}"
-		                             ng-hide="profileForm.email.$valid" class="small red-text text-lighten-1"
-		                             translate="profile.message.email.required"></span>
+		                             ng-hide="profileForm.email.$valid" class="small colorAccent-text"
+		                             translate="profilePage.form.messageControl.emailDirty"></span>
 	                    	</div>
 	                    </div>
 	                    
 	                    <!-- Gender -->
 		                <div class="row"  id="rowGender">
 		                    <div class="input-field col s3">
-		                        <label>{{'civilSection.label.userGender' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                        <label>{{'profilePage.form.label.gender.title' | translate }} <span class="colorAccent-text">*</span></label>
 		                    </div>
 		                    <div class="input-field col s9 center-align">
 		                        <input name="user.gender" class="with-gap" type="radio" id="userGenderF" value="gender.female" ng-model="user.gender" required/>
-		                        <label for="userGenderF">{{'civilSection.label.gender.female' | translate }}</label>
+		                        <label for="userGenderF">{{'profilePage.form.label.gender.female' | translate }}</label>
 		
 		                        <input name="user.gender" class="with-gap" type="radio" id="userGenderM" value="gender.male" ng-model="user.gender" required/>
-		                        <label for="userGenderM">{{'civilSection.label.gender.male' | translate }}</label>
+		                        <label for="userGenderM">{{'profilePage.form.label.gender.male' | translate }}</label>
 		                    </div>
-		                    <span class="small red-text text-lighten-1"
-		                        ng-show="profileForm.gender.$invalid && !profileForm.gender.$pristine" translate="civilSection.userErrors.Gender"></span>
+		                    <span class="small colorAccent-text"
+		                        ng-show="profileForm.gender.$invalid && !profileForm.gender.$pristine" translate="profilePage.form.messageControl.gender"></span>
 		                </div>
 		                
 		                <!-- Firstname -->
 		                <div class="row">
 		                	<div class="col s12 input-field">
-		                        <label for="userFirstname">{{'civilSection.label.userFirstname' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                        <label for="userFirstname">{{'profilePage.form.label.firstname' | translate }} <span class="colorAccent-text">*</span></label>
 		                        <input ng-model="user.firstname" id="userFirstname" name="userFirstname" type="text" class="validate" required 
 		                             ng-class="{ 'has-error' : profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine }">
-		                        <span class="small red-text text-lighten-1"
-		                            ng-show="profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine" translate="civilSection.userErrors.Firstname"></span>
+		                        <span class="small colorAccent-text"
+		                            ng-show="profileForm.userFirstname.$invalid && !profileForm.userFirstname.$pristine" translate="profilePage.form.messageControl.firstname"></span>
 		                    </div>
 		                </div>
 		                
 		                <!-- Name -->
 		                <div class="row">
 		                	<div class="col s12 input-field">
-		                        <label for="userName">{{'civilSection.label.userName' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                        <label for="userName">{{'profilePage.form.label.name' | translate }} <span class="colorAccent-text">*</span></label>
 		                        <input ng-model="user.name" id="userName" name="userName" type="text" class="validate" required 
 		                             ng-class="{ 'has-error' : profileForm.userName.$invalid && !profileForm.userName.$pristine }">
-		                        <span class="small red-text text-lighten-1"
-		                            ng-show="profileForm.userName.$invalid && !profileForm.userName.$pristine" translate="civilSection.userErrors.Name"></span>
+		                        <span class="small colorAccent-text"
+		                            ng-show="profileForm.userName.$invalid && !profileForm.userName.$pristine" translate="profilePage.form.messageControl.name"></span>
 		                    </div>
 		                </div>
                 	</div>
@@ -106,7 +106,7 @@
                 		<!-- e-mail on med and up -->
                         <div class="row hide-on-small-only">
 	                        <div class="col s12 input-field">
-		                        <label for="email"> {{'profile.label.email' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                        <label for="email"> {{'profilePage.form.label.email' | translate }} <span class="colorAccent-text">*</span></label>
 		                        <input type="email" id="email" name="email"
 		                               ng-pattern="/^[a-z]+[a-z0-9._]+@[a-z]+\.[a-z.]{2,5}$/"
 		                               class="validate"
@@ -114,21 +114,21 @@
 		                               ng-class="{ 'invalid': profileForm.email.$invalid }"/>
 		
 		                        <span ng-class="{'has-error': profileForm.email.$dirty && profileForm.email.$error.required}"
-		                             ng-hide="profileForm.email.$valid" class="small red-text text-lighten-1"
-		                             translate="profile.message.email.required"></span>
+		                             ng-hide="profileForm.email.$valid" class="small colorAccent-text"
+		                             translate="profilePage.form.messageControl.emailDirty"></span>
 	                    	</div>
 	                    </div>
 	                    
 	                    <!-- Birthdate -->
 	                    <div class="row" id="rowBirthdate">
 		                    <div class="col s12 input-field">
-		                        <label for="profilBirthdate">{{'profile.label.birthdate' | translate }} <span class="red-text text-lighten-1">*</span></label>
+		                        <label for="profilBirthdate">{{'profilePage.form.label.birthdate' | translate }} <span class="colorAccent-text">*</span></label>
                                 <input id="profilBirthdate" name="profilBirthdate" type="text" class="datepicker"
                                        ng-model="user.birthdate" required
                                        ng-class="{ 'has-error' : profileForm.profilBirthdate.$invalid && !profileForm.profilBirthdate.$pristine }"/>
 		                        
-		                        <span class="small red-text text-lighten-1"
-		                            ng-show="profileForm.profilBirthdate.$invalid && !profileForm.profilBirthdate.$pristine" translate="civilSection.userErrors.BirthDate">
+		                        <span class="small colorAccent-text"
+		                            ng-show="profileForm.profilBirthdate.$invalid && !profileForm.profilBirthdate.$pristine" translate="profilePage.form.messageControl.birthDate">
 		                        </span>
 		                    </div>
 		                </div>
@@ -138,7 +138,7 @@
 		                	<div class="col s12 input-field">
 	                            <input type="text" id="formatedAddress" name="formatedAddress" ng-autocomplete ng-model="temp.addr" details="temp.detailsAdr" 
 	                                   options="temp.optionsAdr" placeholder=""/>
-	                            <label for="userAddres">{{'civilSection.label.userAddress' | translate }}</label>
+	                            <label for="userAddres">{{'profilePage.form.label.address' | translate }}</label>
 	                    	</div>
 		                </div>
 		                
@@ -146,10 +146,10 @@
 		                <div class="row">
 		                	<div class="col s12 input-field">
 		                        <i class="material-icons prefix">phone</i>
-		                        <label for="userPhoneHome"><span class="red-text text-lighten-1">*</span></label>
+		                        <label for="userPhoneHome"><span class="colorAccent-text">*</span></label>
 		                        <input id="userPhoneHome" name="userPhoneHome" type="text" ui-mask="{{'commons.format.phone.pattern' | translate }}" class="validate" min="0" ng-model="user.contact.home" required>
-		                        <span class="small red-text text-lighten-1"
-		                            ng-show="profileForm.userPhoneHome.$invalid && !profileForm.userPhoneHome.$pristine" translate="civilSection.userErrors.phoneNumberMandatory">
+		                        <span class="small colorAccent-text"
+		                            ng-show="profileForm.userPhoneHome.$invalid && !profileForm.userPhoneHome.$pristine" translate="profilePage.form.messageControl.phone">
 		                        </span>
 		                    </div>
 		                </div>
@@ -162,9 +162,11 @@
                 <!-- actions buttons -->
                 <div class="row">
                     <div class="col s12 center-align">
-                        <a class="btn red lighteen-1 white-text waves-effect waves-light center" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
-                        <button class="btn green darken-1 waves-effect waves-light center" type="submit" ng-disabled="profileForm.$invalid" translate="commons.buttons.validate">
-                            <i class="mdi-content-send right"></i>
+                        <button class="waves-effect waves-white btn btn-s colorAccent" ng-click="doTheBack()" translate="commons.buttons.cancel"></button>
+                        <button type="submit" ng-disabled="profileForm.$invalid" translate="commons.buttons.validate" ng-click="updateProfilUser()"
+                                ng-class="{'btn btn-s waves-effect waves-white disabled': profileForm.$invalid, 
+                                           'btn btn-s waves-effect waves-white colorSecondary': !profileForm.$invalid}">
+                            
                         </button>
                     </div>
                 </div>
