Module Compte Utilisateur

--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -9,7 +9,6 @@
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
-                    <span class="small">{{'profile.label.avatar' | translate }}</span>
                 </div>
                 <div class="col m7 s12">
                     <br/>
@@ -80,6 +79,14 @@
                 </tr>
                 </tbody>
             </table>
+        </div>
+    </div>
+    
+    <div class="row center-align">
+        <div class="col s12">
+            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+                {{'commons.buttons.back' | translate }}
+            </button>
         </div>
     </div>
 </div>
