--- a/src/app/modules/commons/users/mainProfile.html
+++ b/src/app/modules/commons/users/mainProfile.html
@@ -9,7 +9,6 @@
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
-                    <span class="small" translate="profile.label.avatar"></span>
                 </div>
                 <div class="col m7 s12">
                     <br/>
@@ -27,7 +26,7 @@
         <div class="col s12 m4 l4">
             <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
-                    <span class="card-content title white-text">{{'profile.tabs.account' | translate }}</span>
+                    <span class="card-content title white-text">{{'profileMainPage.tabs.account' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
@@ -36,7 +35,7 @@
                                 <i class="material-icons md-48">account_box</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.profil' | translate }}
+                            {{'profileMainPage.tabs.profil' | translate }}
                             <br/>
                             <br/>
                         </div>
@@ -49,7 +48,7 @@
                                 <i class="material-icons md-48">https</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.password' | translate }}
+                            {{'profileMainPage.tabs.password' | translate }}
                             <br/>
                             <br/>
                         </div>
@@ -61,7 +60,7 @@
                                 <i class="material-icons md-48">verified_user</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.billing' | translate }}
+                            {{'profileMainPage.tabs.billing' | translate }}
                             <br/>
                         </div>
 
@@ -74,7 +73,7 @@
         <div class="col s12 m4 l4">
             <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
-                    <span class="card-content title white-text">{{'profile.tabs.sandbox' | translate }}</span>
+                    <span class="card-content title white-text">{{'profileMainPage.tabs.sandbox' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
@@ -83,7 +82,7 @@
                                 <i class="material-icons md-48">rotate_90_degrees_ccw</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.sbSwitch' | translate }}
+                            {{'profileMainPage.tabs.sbSwitch' | translate }}
                             <br/>
                             <br/>
                         </div>
@@ -95,7 +94,7 @@
                                 <i class="material-icons md-48">share</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.sbSharing' | translate }}
+                            {{'profileMainPage.tabs.sbSharing' | translate }}
                             <br/>
                             <br/>
                         </div>
@@ -106,7 +105,7 @@
                                 <i class="material-icons md-48">group</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.sbMembers' | translate }}
+                            {{'profileMainPage.tabs.sbMembers' | translate }}
                             <br/>
                         </div>
 
@@ -118,7 +117,7 @@
         <div class="col s12 m4 l4">
             <div class="card white colorMain-text">
                 <div class="card-content center-align colorMain">
-                    <span class="card-content title white-text">{{'profile.tabs.preference' | translate }}</span>
+                    <span class="card-content title white-text">{{'profileMainPage.tabs.preference' | translate }}</span>
                 </div>
                 <div class="card-content center-align">
                     <div class="row">
@@ -127,7 +126,7 @@
                                 <i class="material-icons md-48">settings_applications</i>
                             </span>
                             <br/>
-                            {{'profile.tabs.settings' | translate }}
+                            {{'profileMainPage.tabs.settings' | translate }}
                             <br/>
                             <br/>
                         </div>
@@ -139,7 +138,7 @@
                                 <i class="material-icons md-48">grade</i>
                             </a>
                             <br/>
-                            {{'profile.tabs.sbDefault' | translate }}
+                            {{'profileMainPage.tabs.sbDefault' | translate }}
                             <br/>
                             <br/>
                         </div>
@@ -151,7 +150,7 @@
                                 <i class="material-icons md-48">notifications_active</i>
                             </span>
                             <br/>
-                            {{'profile.tabs.notificationSettings' | translate }}
+                            {{'profileMainPage.tabs.notificationSettings' | translate }}
                             <br/>
                         </div>
 
