--- a/src/app/modules/commons/users/sandbox/invitationMembers.html
+++ b/src/app/modules/commons/users/sandbox/invitationMembers.html
@@ -9,7 +9,6 @@
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="user" width="'100px'"></avatar>
-                    <span class="small" translate="profile.label.avatar"></span>
                 </div>
                 <div class="col m7 s12">
                     <br/>
@@ -26,6 +25,14 @@
     <div class="row">
         <div class="col s12 card">
             <div class="title">Invitation Members</div>
+        </div>
+    </div>
+    
+    <div class="row center-align">
+        <div class="col s12">
+            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+                {{'commons.buttons.back' | translate }}
+            </button>
         </div>
     </div>
 </div>
