--- a/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
+++ b/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
@@ -1,46 +1,55 @@
-<div class="container" ng-cloack>
+<div class="container">
 
     <!-- space between header menu and body-->
-    <div class="row"></div>
+    <div class="row hide-on-med-and-down"></div>
 
     <!-- Entete -->
-    <div class="row">
-        <div class="col s12">
-            <div class="row colorMain white-text center">
-                <div class="col m3 s12 center">
-                    <avatar person="user" width="'100px'"></avatar>
-                </div>
-                <div class="col m7 s12">
-                    <br/>
-                    <h4>{{user.firstname}} {{user.name}}</h4>
-                    <h5 ng-bind="user.account.login"></h5>
-                </div>
-                <div class="col m2 s12">
-                    <br/>&nbsp;
-                </div>
-            </div>
+    <div class="row colorAccent-text colorBckgModal center valign-wrapper hide-on-med-and-down">
+        <div class="col m1">
+            <i class="material-icons md-48">group</i>
+        </div>
+        <div class="col m9 colorMain-text left-align">
+            <h5>{{'sbMemberMngtPage.title' | translate }}</h5>
+        </div>
+        
+        <div class="col m2">
+            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+                {{'commons.buttons.back' | translate }}
+            </button>
         </div>
     </div>
     
-    <div class="row colorMain white-text">
-        <div class="col s2 left-align">
-            <h5><i class="material-icons md-36">group</i></h5>
-        </div>
-
-        <div class="col s8 center-align">
-            <h5>{{'profile.tabs.sbMembers' | translate }}</h5>
+    
+    <!-- Entete -->
+    <div class="row colorAccent-text colorBckgModal center hide-on-large-only">
+        <div class="col s12">&nbsp;</div>
+        
+        <div class="col s12 colorMain-text">
+            <h5>{{'sbMemberMngtPage.title' | translate }}</h5>
         </div>
         
-        <div class="col s2">&nbsp;</div>
-        
+        <div class="col s12">&nbsp;</div>
+        <div class="col s12">
+            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+                {{'commons.buttons.back' | translate }}
+            </button>
+        </div>
+        <div class="col s12">&nbsp;</div>
     </div>
 
+
     <div class="row">
+        
+        <div class="col s12 colorAccent-text">
+            <h6>{{'sbMemberMngtPage.label.listMember' | translate }}</h6>
+        </div>
+        
+        
         <ul>
             <li class="col l3 m6 s12" ng-repeat="member in sandbox.members">
-                <div class="card white blue-grey-text text-darken-2">
+                <div class="card colorBckgModal colorMain-text">
                     <div class="card-content center-align" style="height:48px;">
-                        <span class="card-title blue-grey-text text-darken-2">
+                        <span class="card-title colorMain-text">
                             {{member.person.firstname}} {{member.person.name}}
                         </span>
                     </div>
@@ -53,24 +62,24 @@
                     </div>
 
                     <div class="card-action">
-                        <span class="blue-grey-text text-darken-2">Etat</span>
+                        <span class="colorMain-text">{{'sbMemberMngtPage.label.memberActif' | translate }}</span>
                         <div class="right"> 
-                            <input type="checkbox" ng-model="compareList[member.person._id]" name="compare"
-                                   ng-change="updateMemberSandbox(member.person._id)"
-                                   ng-checked="member.status=='activate'" id="cb-{{member.person._id}}"/>
-                            <label for="cb-{{member.person._id}}"></label>
+                            <div class="switch">
+                                <label>
+                                  {{'sbMemberMngtPage.label.off' | translate }}
+                                  <input type="checkbox" ng-click="updateMemberSandbox(member.person._id)"
+                                     ng-checked="member.status=='activate'">
+                                  <span class="lever"></span>
+                                    {{'sbMemberMngtPage.label.on' | translate }}
+                                </label>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
             </li>
         </ul>
+        <div class="col s12">&nbsp;</div>
     </div>
     
-    <div class="row center-align">
-        <div class="col s12">
-            <button class="btn colorAccent white-text" ng-click="doTheBack()">
-                {{'commons.buttons.back' | translate }}
-            </button>
-        </div>
-    </div>
 </div>
