--- a/src/app/index.css
+++ b/src/app/index.css
@@ -580,7 +580,7 @@ table.super-fancy tr.foobar {
 .fs-loader {
     margin: 0;
     padding: 0;
-    background: url(../assets/images/background1.jpg) black no-repeat center fixed;
+    background: url(../assets/images/handball/Back02.jpeg) black no-repeat center fixed;
     -webkit-background-size: cover;
     background-size: cover;
     width: 100%;
