--- a/src/app/modules/sandbox/effective/players/writePlayer.html
+++ b/src/app/modules/sandbox/effective/players/writePlayer.html
@@ -9,7 +9,7 @@
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
                     <avatar person="player" width="'100px'"></avatar>
-                    <span class="small">{{'effectiveLabels.effectiveAvatar' | translate }}</span>
+                    <span class="small" translate="effectiveLabels.effectiveAvatar"></span>
                 </div>
                 <div class="col m7 s12">
                     <br/>
@@ -57,10 +57,16 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row" ng-if="showBirthdate">
                             <div class="col s12 m5 input-field">
                                 <label>{{'playerLabels.playerBirthdate' | translate }} <span class="red-text text-lighten-1">*</span></label>
-                                <input id="playerBirthdate" class="datepicker" name="playerBirthdate" type="text" ng-model="player.birthdate" required
+                                <input id="playerBirthdate" name="playerBirthdate" type="text"
+                                       ng-model="player.birthdate" required
+                                       input-date data-today="today" data-first-day="1" data-clear="clear" data-close="close"
+                                       data-format="{{formatDateSubmit}}" data-months-full="{{ month }}"
+                                       data-months-short="{{ monthShort }}" data-weekdays-full="{{ weekdaysFull }}"
+                                       data-weekdays-short="{{ weekdaysShort }}" data-weekdays-letter="{{ weekdaysLetter }}"
+                                       max="{{getToday()}}" data-container="" data-select-years="90"
                                        ng-class="{ 'has-error' : playerCivilSection.playerBirthdate.$invalid && !playerCivilSection.playerBirthdate.$pristine }"/>
                                 <span class="small red-text text-lighten-1"
                                       ng-show="playerCivilSection.playerBirthdate.$invalid && !playerCivilSection.playerBirthdate.$pristine"
