#156 : [EFF-003] Ajout joueur : avatar

--- a/src/app/modules/commons/users/profile/writeProfile.html
+++ b/src/app/modules/commons/users/profile/writeProfile.html
@@ -8,7 +8,7 @@
         <div class="col s12">
             <div class="row colorMain white-text center">
                 <div class="col m3 s12 center">
-                    <avatar person="user" width="'100px'"></avatar>
+                    <avatar person="user" width="'100px'" collection="User"></avatar>
                     <span class="small">{{'profilePage.form.label.avatar' | translate }}</span>
                 </div>
                 <div class="col m7 s12">
