--- a/src/app/modules/commons/users/signup/signupEnd.html
+++ b/src/app/modules/commons/users/signup/signupEnd.html
@@ -200,7 +200,7 @@
 
                                 <button type="submit" ng-click="createStructure()" translate="commons.buttons.validate" 
                                         ng-disabled="createStructureForm.$invalid" tabindex="8"
-                                        ng-class="{'btn btn-s waves-effect waves-white disabled': createStructureForm.$invalid, 
+                                        ng-class="{'btn waves-effect waves-white disabled': createStructureForm.$invalid, 
                                               'btn btn-s waves-effect waves-white colorSecondary': !createStructureForm.$invalid}">
                                 </button>
                             </div>
