--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,8 +1,14 @@
 <div id="index-banner" class="colorMain-text">
     <div class="section no-pad-bot hero white-text center-align">
         
-            <h2 class="title" translate="landing.main-title"></h2>
-            <h5 class="title hide-on-small-only" translate="landing.sub-title"></h5>
+            <h3 translate="landing.main-title"></h3>
+            <h3>&nbsp;</h3>
+            <h3 class=" hide-on-small-only">
+                <span translate="landing.sub-title" ></span>
+            </h3>
+            <h3>&nbsp;</h3>
+            <a class="btn waves-effect waves-white colorAccent" 
+               ng-click="openSignup()" translate="navbar.signup"></a>
 
     </div>
     
