--- a/src/app/modules/sandbox/effective/team/mainTeam.html
+++ b/src/app/modules/sandbox/effective/team/mainTeam.html
@@ -20,6 +20,10 @@
         </v-tabs>
         
     </div>
+    
+    <div class="row">
+        <filter-calendar periodicity="periodicity" periodicity-active="periodicityActive" meta="meta"></filter-calendar>
+    </div>
 
     <div class="row">
 
