--- a/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
+++ b/src/app/modules/commons/users/sandbox/sbMemberMgnt.html
@@ -13,7 +13,7 @@
         </div>
         
         <div class="col m2">
-            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+            <button class="btn colorAccent white-text right" ng-click="doTheBack()">
                 {{'commons.buttons.back' | translate }}
             </button>
         </div>
@@ -40,7 +40,7 @@
 
     <div class="row">
         
-        <div class="col s12 colorAccent-text">
+        <div class="col s12 colorMain-text">
             <h6>{{'sbMemberMngtPage.label.listMember' | translate }}</h6>
         </div>
         
@@ -80,6 +80,15 @@
             </li>
         </ul>
         <div class="col s12">&nbsp;</div>
+        <div class="col s12 divider"></div>
+        <div class="col s10 colorMain-text">
+            <h6>{{'sbMemberMngtPage.label.invitePending' | translate }}</h6>
+        </div>
+        <div class="col s2 center">
+            <a href="#/private/inviteMember" class="waves-effect waves-light btn right colorAccent white-text">
+                <i class="material-icons">share</i>
+            </a>
+        </div>
     </div>
     
 </div>
