--- a/src/app/modules/sandbox/effective/team/writeTeam.html
+++ b/src/app/modules/sandbox/effective/team/writeTeam.html
@@ -34,7 +34,7 @@
     
     <!-- form-->
     <div class="row">
-        <form ng-submit="writeTeam()" name="teamForm">
+        <form novalidate name="teamForm">
             <div class="card-panel">
                 <!-- Team home -->
                 <div class="row">
@@ -106,9 +106,11 @@
             <!-- actions buttons -->
             <div class="row">
                 <div class="col s12 center-align">
-                    <a class="btn red lighteen-1 white-text waves-effect waves-light center" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
-                    <button class="btn green darken-1 waves-effect waves-light center" type="submit" ng-disabled="teamForm.$invalid" translate="commons.buttons.validate">
-                        <i class="mdi-content-send right"></i>
+                    <a class="waves-effect waves-white btn btn-s colorAccent" ng-click="doTheBack()" translate="commons.buttons.cancel"></a>
+                    <button type="submit" ng-click="writeTeam()" translate="commons.buttons.validate" 
+                            ng-disabled="teamForm.$invalid" tabindex="8"
+                            ng-class="{'btn waves-effect waves-white disabled': teamForm.$invalid, 
+                                       'btn btn-s waves-effect waves-white colorSecondary': !teamForm.$invalid}">
                     </button>
                 </div>
             </div>
