--- a/src/app/modules/commons/users/password/pwdUpdate.html
+++ b/src/app/modules/commons/users/password/pwdUpdate.html
@@ -103,8 +103,8 @@
                            class="btn colorAccent white-text waves-effect waves-light center"
                            translate="commons.buttons.cancel"></button>
                         <button type="submit" ng-disabled="pwdForm.$invalid" translate="commons.buttons.validate"
-                                ng-class="{'btn btn-s waves-effect waves-white disabled': pwdForm.$invalid, 
-                                           'btn btn-s waves-effect waves-white colorSecondary': !pwdForm.$invalid}" tabindex="4">
+                                ng-class="{'btn waves-effect waves-white disabled': pwdForm.$invalid, 
+                                           'btn waves-effect waves-white colorSecondary': !pwdForm.$invalid}" tabindex="4">
                         </button>
                     </div>
                 </div>
