--- a/src/app/modules/commons/users/billing/billing.html
+++ b/src/app/modules/commons/users/billing/billing.html
@@ -1,60 +1,75 @@
-<div class="container" ng-cloack>
+<div class="container colorMain-text" ng-cloack>
 
     <!-- space between header menu and body-->
-    <div class="row"></div>
+    <div class="row hide-on-med-and-down"></div>
 
     <!-- Entete -->
-    <div class="row">
-        <div class="col s12">
-            <div class="row colorMain white-text center">
-                <div class="col m3 s12 center">
-                    <avatar person="user" width="'100px'"></avatar>
-                </div>
-                <div class="col m7 s12">
-                    <br/>
-                    <h4>{{user.firstname}} {{user.name}}</h4>
-                    <h5>{{user.account.login}}</h5>
-                </div>
-                <div class="col m2 s12">
-                    <br/>&nbsp;
-                </div>
-            </div>
+    <div class="row colorAccent-text colorBckgModal center valign-wrapper hide-on-med-and-down">
+        <div class="col m1">
+            <i class="material-icons md-48">verified_user</i>
+        </div>
+        <div class="col m9 colorMain-text left-align">
+            <h5>{{'billingPage.title' | translate }}</h5>
+        </div>
+        
+        <div class="col m2">
+            <button class="btn colorAccent white-text right" ng-click="doTheBack()">
+                {{'commons.buttons.back' | translate }}
+            </button>
         </div>
     </div>
+    
+    
+    <!-- Entete -->
+    <div class="row colorAccent-text colorBckgModal center hide-on-large-only">
+        <div class="col s12">&nbsp;</div>
+        
+        <div class="col s12 colorMain-text">
+            <h5>{{'billingPage.title' | translate }}</h5>
+        </div>
+        
+        <div class="col s12">&nbsp;</div>
+        <div class="col s12">
+            <button class="btn colorAccent white-text" ng-click="doTheBack()">
+                {{'commons.buttons.back' | translate }}
+            </button>
+        </div>
+        <div class="col s12">&nbsp;</div>
+    </div>
 
-    <div class="row">
-        <div class="col s12 card">
-            <table class="highlight responsive-table">
+    <!-- Large view-->
+    <div class="row hide-on-med-and-down">
+        <div class="col s12">
+            <table>
                 <thead>
                 <tr>
-                    <th translate="profile.label.activity"></th>
-                    <th translate="profile.label.product"></th>
-                    <th></th>
+                    <th class="center-align" translate="billingPage.label.activity"></th>
+                    <th class="center-align" translate="billingPage.label.product"></th>
+                    <th class="center-align" translate="billingPage.label.price"></th>
+                    <th class="center-align" translate="billingPage.label.billingnumber"></th>
+                    <th class="center-align" translate="billingPage.label.billingdate"></th>
+                    <th class="center-align" translate="billingPage.label.cardNumber"></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="plan in user.account.listPlan track by $index">
-                    <td>
-                        <div class="valign-wrapper">
-                            <img class="valign" ng-src="assets/images/activity/{{plan.activity.code}}.jpg"
-                                 height="15px"/>
-                            &nbsp;
-                            <div class="valign">{{plan.activity.label | translate}}</div>
-                        </div>
+                <tr ng-repeat="plan in user.account.listPlan track by $index" class="colorBckgModal">
+                    <td class="center-align">
+                        <h4>{{plan.activity.label | translate}}</h4>
                     </td>
-                    <td ng-bind="plan.levelPlan"></td>
+                    <td class="center-align colorAccent-text">
+                        <h5>{{plan.levelPlan}}</h5>
+                    </td>
 
-                    <td>
-                         <span ng-if="plan.status === 'open' || plan.status === 'notpaid'"><a
-                                 href="#/private/billing/pay/{{$index}}" class="btn btn-s"
-                                 translate="profile.label.pay"></a></span>
-                        <table class="highlight responsive-table">
+                    <td ng-if="plan.status === 'open' || plan.status === 'notpaid'" colspan="4">
+                         <a href="#/private/billing/pay/{{$index}}" class="btn waves-effect waves-white colorSecondary"
+                             translate="billingPage.label.pay">
+                         </a>
+                    </td>
+                    <td ng-if="plan.status !== 'open' && plan.status !== 'notpaid'">
+                        <table class="responsive-table">
                             <thead>
                             <tr>
-                                <th translate="profile.label.price"></th>
-                                <th translate="profile.label.billingnumber"></th>
-                                <th translate="profile.label.billingdate"></th>
-                                <th translate="profile.label.cardNumber"></th>
+                                
                                 <th></th>
                             </tr>
                             </thead>
@@ -82,11 +97,36 @@
         </div>
     </div>
     
-    <div class="row center-align">
+    <!-- medium and small view-->
+    <div class="row hide-on-large-only">
         <div class="col s12">
-            <button class="btn colorAccent white-text" ng-click="doTheBack()">
-                {{'commons.buttons.back' | translate }}
-            </button>
+            <table>
+                
+                <tbody>
+                <tr ng-repeat="plan in user.account.listPlan track by $index" class="colorBckgModal">
+                    <td class="white colorMain-text" translate="billingPage.label.activity"></td>
+                    <td class="center-align">
+                        <h4>{{plan.activity.label | translate}}</h4>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="white colorMain-text" translate="billingPage.label.product"></td>
+                    <td class="center-align colorAccent-text">
+                        <h5>{{plan.levelPlan}}</h5>
+                    </td>
+                 </tr>
+                <tr>
+                    <td ng-if="plan.status === 'open' || plan.status === 'notpaid'" colspan="4">
+                         <a href="#/private/billing/pay/{{$index}}" class="btn waves-effect waves-white colorSecondary"
+                             translate="billingPage.label.pay">
+                         </a>
+                    </td>
+                    <td ng-if="plan.status !== 'open' && plan.status !== 'notpaid'">
+                        &nbsp;
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
