--- a/src/app/index.css
+++ b/src/app/index.css
@@ -230,11 +230,11 @@ footer.page-footer {
 }
 
 .hero {
-    background: url("../assets/images/backHome.jpg") center 40%;
+    background: url("../assets/images/handball/Home2.jpg") center 40%;
 }
 
-.hero-pricing {
-    background: url("../assets/images/backHome.jpg") center 40%;
+.heroPartOne {
+    background: url("../assets/images/handball/Home1.png") center 50%;
 }
 
 .hero-signup {
@@ -249,16 +249,16 @@ footer.page-footer {
     background-size: cover;
     width: 100%;
     padding-top: 2%;
-    min-height: calc(70vh - 100px);
+    min-height: calc(75vh - 100px);
     height: 100%;
 }
 
-.hero-pricing, .hero-signup, .hero-signup-end {
+.heroPartOne, .hero-signup, .hero-signup-end {
     background-size: cover;
-    width: 100%;
-    padding-top: 2%;
-    min-height: calc(35vh - 100px);
-    height: 100%;
+    width: 90%;
+    padding-top: 1%;
+    min-height: calc(30vh);
+    height: 90%;
 }
 
 
