--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -1,36 +1,29 @@
-<div id="index-banner" class="colorMain-text">
+<div id="index-banner" class="colorMain-text white">
     <div class="section no-pad-bot hero white-text center-align">
         
             <h3 translate="landing.main-title"></h3>
-            <h3>&nbsp;</h3>
-            <h3 class=" hide-on-small-only">
+            <h3  class=" hide-on-small-only ">&nbsp;</h3>
+            <h3 class=" hide-on-small-only ">
                 <span translate="landing.sub-title" ></span>
             </h3>
             <h3>&nbsp;</h3>
             <a class="btn waves-effect waves-white colorAccent" 
                ng-click="openSignup()" translate="navbar.signup"></a>
+            <h3>&nbsp;</h3>
 
     </div>
     
     <div class="container">
         <div class="section">
+            <h3>&nbsp;</h3>
             <h4 class="center-align colorAccent-text" translate="landing.area-2.title"></h4>
+            <h3>&nbsp;</h3>
             <h5 class="center-align hide-on-small-only" translate="landing.area-2.content"></h5>
         </div>
     </div>
 
-    <div class=" colorBckgModal colorMain-text">
-        <div class="section row describe container">
-            <div class="col s12 m6">
-                <div class="center">
-                    <div class="colorAccent-text">
-                        <i class="material-icons large">assessment</i>
-                    </div>
-                    <h5 translate="landing.area-3.item-1.title" class="title"></h5>
-
-                    <p class="light left-align container" translate="landing.area-3.item-1.content"></p>
-                </div>
-            </div>
+    <div class="bckgColor colorMain-text">
+        <div class="row container">
 
             <div class="col s12 m6">
                 <div class="center">
@@ -42,7 +35,19 @@
                     <p class="light left-align container" translate="landing.area-3.item-2.content"></p>
                 </div>
             </div>
-
+            
+            <div class="col s12 m6">
+                <div class="center">
+                    <div class="heroPartOne">
+                        &nbsp;
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <div class="row">&nbsp;</div>
+        
+        <div class="row container">
             <div class="col s12 m6">
                 <div class="center">
                     <div class="colorAccent-text">
@@ -67,13 +72,14 @@
             </div>
         </div>
     </div>
+    <div class="row">&nbsp;</div>
     
     <div class="colorSecondary">
         <div class="section white-text">
-            
+            <div class="row">&nbsp;</div>
 
             <h5 class="center-align" translate="landing.area-4.content"></h5>
-
+            <div class="row">&nbsp;</div>
             <div class="row">
                 <!-- 
                 <span class="col m2 hide-on-small-only">&nbsp;</span>
@@ -85,37 +91,4 @@
             </div>
         </div>
     </div>
-    
-    <div>
-        <div class="section container">
-            <!--   Icon Section   -->
-            <div class="row">
-                <div class="col s12 m6">
-                    <div class="center icon-block">
-                        <a href="mailto:contact@qaobee.com">
-                            <div class="colorAccent-text">
-                                <i class="medium material-icons">email</i>
-                            </div>
-                        </a>
-                        <h5 class="center" translate="landing.contact.email"></h5>
-                    </div>
-                </div>
-
-
-                <div class="col s12 m6">
-                    <div class="center icon-block">
-                        <a href="#/about" class="modal-trigger">
-                            <div class="colorAccent-text">
-                                <i class="medium material-icons">feedback</i>
-                            </div>
-                        </a>
-                        <h5 class="center" translate="landing.contact.about"></h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-        
-    
 </div>
